--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["Quan-feng WU <wuquanfeng@ihep.ac.cn>"]
 version = "0.1.0"
 
 [deps]
+AlphaS = "cb1ee771-e516-45dd-b486-2e56d6c85bfe"
 Polylogarithms = "43cc4a2f-1a2b-4fbb-87e3-95c794af13de"
