just test for PolyLog.jl

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ AlphaS = "cb1ee771-e516-45dd-b486-2e56d6c85bfe"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 JetTool = "b22dc29b-815f-4300-a1b3-e2f97893f71a"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+PolyLog = "85e3b03c-9856-11eb-0374-4dc1f8670e7f"
 Polylogarithms = "43cc4a2f-1a2b-4fbb-87e3-95c794af13de"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 StructParticle = "ba31282d-ba71-4615-a5c1-2453621d5387"
